# ironic-specs

./: .coveragerc  CONTRIBUTING.rst  HACKING.rst  README.rst  openstack-common.conf  setup.cfg
doc/source/: conf.py  index.rst  installation.rst  usage.rst
ironic-specs/: __init__.py
ironic-specs/tests/: test_ironic-specs.py
specs/: template.rst
specs/juno/: agent-driver.rst  fully-async-api.rst
tests/: test_titles.py
